Refresh homepage content and layout

--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -198,6 +198,26 @@ padding-left: 0px !important;
   background-color: #f0f0f0 !important;
 }
 
+/* Logo sizing */
+.navbar .navbar-brand img {
+  max-height: 60px;
+}
+
+/* Review carousel tweaks */
+#reviewCarousel .testimonial-box {
+  background: #f7f7f7;
+  border-radius: 12px;
+  height: 100%;
+}
+
+#reviewCarousel .owl-dots .owl-dot span {
+  background: #c0c0c0;
+}
+
+#reviewCarousel .owl-dots .owl-dot.active span {
+  background: #4893c1;
+}
+
 .collapsible:hover::after {
 color: #000000 !important;
 }
