--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -63,9 +63,24 @@
 
   .preloader-2 div {
     position: relative !important;
-    width: 50px !important;
-    height: 50px !important;
-    content: url("../images/spinner.gif") !important;
+    width: auto !important;
+    height: auto !important;
+    display: flex !important;
+    align-items: center !important;
+    justify-content: center !important;
+  }
+
+  .preloader-2 .preloader-message {
+    font-family: "Google Sans", sans-serif !important;
+    font-size: 1.5rem !important;
+    font-weight: 500 !important;
+    letter-spacing: 0 !important;
+    text-transform: none !important;
+    color: #282828 !important;
+    padding: 0 !important;
+    background: transparent !important;
+    border-radius: 0 !important;
+    box-shadow: none !important;
   }
 
 .underlineload:hover:after {
