--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -73,7 +73,7 @@
 
   .preloader-2 .preloader-message {
     font-family: "GystRegular", sans-serif !important;
-    font-size: 1.5rem !important;
+    font-size: 2.25rem !important;
     font-weight: 400 !important;
     letter-spacing: 0 !important;
     text-transform: none !important;
@@ -351,7 +351,7 @@ a {
 }
 
 :root {
-  --vertical-section-spacing: 60px;
+  --vertical-section-spacing: 30px;
   --vertical-column-gap: 30px;
 }
 
@@ -559,6 +559,11 @@ main.flex-fill {
 
 .equal-height-row .content-card {
   height: 100%;
+  flex: 1;
+}
+
+.equal-height-row {
+  align-items: stretch !important;
 }
 
 .headshot-card {
