--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -351,7 +351,7 @@ a {
 }
 
 :root {
-  --vertical-section-spacing: 30px;
+  --vertical-section-spacing: 15px;
   --vertical-column-gap: 30px;
 }
 
@@ -531,6 +531,11 @@ textarea {
   display: flex;
   flex-direction: column;
   height: 100%;
+}
+
+.content-card.content-card--translucent {
+  background: rgba(255, 255, 255, 0.7);
+  box-shadow: 0 14px 40px rgba(72, 147, 193, 0.04);
 }
 
 main.flex-fill {
