--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -52,14 +52,14 @@
 }
 
 .underlineload {
-  color: #4893c1 !important;
+  color: #0D7282 !important;
     display: inline-block;
     position: relative;
     top: -100;
   }
 
   .underlineload:hover {
-    color: #4893c1 !important;
+    color: #0D7282 !important;
   }
 
   .preloader-2 div {
@@ -85,14 +85,14 @@
   }
 
 .underlineload:hover:after {
-background: #4893c1 !important;
+background: #0D7282 !important;
 width:100%;
 right: 0;
 }
 
 .underlineload:after {
   background: none repeat scroll 0 0 transparent;
-  color: #4893c1 !important;
+  color: #0D7282 !important;
   bottom: 0;
   content: "";
   display: block;
@@ -252,7 +252,7 @@ padding-left: 0px !important;
 }
 
 .tagline-highlight {
-  color: #4893c1;
+  color: #0D7282;
   font-style: italic;
   font-weight: 600;
 }
@@ -277,7 +277,7 @@ padding-left: 0px !important;
 }
 
 #reviewCarousel .owl-dots .owl-dot.active span {
-  background: #4893c1;
+  background: #0D7282;
 }
 
 .testimonial-carousel .owl-dots .owl-dot span {
@@ -285,7 +285,7 @@ padding-left: 0px !important;
 }
 
 .testimonial-carousel .owl-dots .owl-dot.active span {
-  background: #4893c1;
+  background: #0D7282;
 }
 
 .testimonial-carousel-card {
@@ -360,11 +360,11 @@ a {
 }
 
 .contact:hover {
-  color: #4893c1 !important;
+  color: #0D7282 !important;
 }
 
 a:hover {
-  color: #4893c1 !important;
+  color: #0D7282 !important;
 }
 
 .breadcrumb .breadcrumb-item {
@@ -387,7 +387,7 @@ a:hover {
 }
 
 .blue-font-color {
-  color: #4893c1 !important;
+  color: #0D7282 !important;
 }
 
 hr {
@@ -626,16 +626,16 @@ main.flex-fill {
 }
 
 .accent-text {
-  color: #4893c1;
+  color: #0D7282;
 }
 
 .text-primary {
-  color: #4893c1 !important;
+  color: #0D7282 !important;
 }
 
 .accent-btn {
-  background: #4893c1;
-  border-color: #4893c1;
+  background: #0D7282;
+  border-color: #0D7282;
   color: #ffffff !important;
 }
 
@@ -683,7 +683,7 @@ main.flex-fill {
   font-weight: 600;
   position: absolute;
   left: 0;
-  color: #4893c1;
+  color: #0D7282;
 }
 
 body {
