--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -651,8 +651,8 @@ main.flex-fill {
 
 .accent-btn:hover,
 .accent-btn:focus {
-  background: #3a7aa5;
-  border-color: #3a7aa5;
+  background: #0D7282;
+  border-color: #0D7282;
   color: #ffffff !important;
 }
 
