--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -1732,7 +1732,7 @@ a.btn-outline-dark {
 a.btn-outline-dark:hover,
 a.btn-outline-dark:not(:disabled):not(.disabled).active,
 a.btn-outline-dark:not(:disabled):not(.disabled):active {
-  background: #282828;
+  background: transparent;
   border-color: #282828;
   color: #fff;
 }
@@ -4553,7 +4553,7 @@ ol li ul, ol li ol {
   }
   .navbar .dropdown-grey .nav-item.nav-dropdown .dropdown-menu,
   .navbar .dropdown-grey .nav-item.nav-dropdown .dropdown-menu .sub-dropdown .sub-dropdown-menu {
-    background: #f5f5f5;
+    background: #fff;
   }
   .navbar .dropdown-transparent .nav-item.nav-dropdown .dropdown-menu,
   .navbar .dropdown-transparent .nav-item.nav-dropdown .dropdown-menu .sub-dropdown .sub-dropdown-menu {
@@ -4726,7 +4726,7 @@ ol li ul, ol li ol {
     background: #1e1e1e;
   }
   .navbar .dropdown-grey {
-    background: #f5f5f5;
+    background: #fff;
   }
   .navbar .dropdown-transparent {
     background: rgba(255, 255, 255, 0.9);
@@ -5336,7 +5336,7 @@ ol li ul, ol li ol {
     top: 60px;
   }
   .navbar .nav.dropdown-grey .nav-megadropdown .mega-menu {
-    background: #f5f5f5;
+    background: #fff;
   }
   .navbar .nav.dropdown-dark .nav-megadropdown .mega-menu {
     background: #1e1e1e;
