--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -475,7 +475,7 @@ textarea {
 }
 
 .content-card {
-  background: #FBF6F5;
+  background: #fffefe;
   border-radius: 12px;
   box-shadow: 0 14px 40px rgba(72, 147, 193, 0.08);
   padding: 32px;
