--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -240,7 +240,7 @@ padding-left: 0px !important;
 }
 
 .testimonial-carousel-card {
-  background: #ffffff;
+  background: #fffcfb;
   border-radius: 14px;
   padding: 22px;
   display: flex;
