--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -773,9 +773,8 @@ body, p, span, li, a, button, input, textarea, select, label {
   position: absolute;
   inset: 0;
   display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 3rem;
+  align-items: flex-end;
+padding-bottom: 6rem;
   text-align: center;
 }
 
