--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -819,7 +819,8 @@ padding-bottom: 6rem;
   bottom: 0;
 
   display: flex;
-  align-items: center;
+  align-items: flex-end;
+padding-bottom: 6rem;
   justify-content: center;
 
   padding: 3rem;
