--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -806,8 +806,7 @@ padding-bottom: 6rem;
 
 .hero-image img {
   width: 100%;
-  height: 100%;
-  object-fit: cover;
+  height: auto;
   display: block;
 }
 
