--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -806,7 +806,8 @@ padding-bottom: 6rem;
 
 .hero-image img {
   width: 100%;
-  height: auto;
+  height: 100%;
+  object-fit: cover;
   display: block;
 }
 
