--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -2,16 +2,24 @@
 @charset "UTF-8";
 @import url("../fonts/stylesheet.css");
 
-.underlineload {
-  color: #820d0d !important;
-    display: inline-block;
-    position: relative;
-    top: -100;
-  }
-
-  .underlineload:hover {
-    color: #820d0d !important;
-  }
+.underlineload{
+  color:#820d0d !important;
+  display:inline-block;
+  position:relative;
+  top:0; /* keep at 0 */
+}
+.underlineload:hover{ color:#820d0d !important; }
+.underlineload:after{
+  content:"";
+  position:absolute;
+  left:0;
+  bottom:0;
+  height:1px;
+  width:0;
+  background:#820d0d;
+  transition:width .5s ease;
+}
+.underlineload:hover:after{ width:100%; }
 
   .preloader-2 div {
     position: relative !important;
