--- a/assets/css/additional.css
+++ b/assets/css/additional.css
@@ -808,3 +808,11 @@ main.flex-fill{
   font-weight: 300;
   opacity: 0.85;
 }
+.space-card-img{
+  width: 100%;
+  height: 180px;
+  object-fit: cover;
+  border-radius: 10px;
+  margin-bottom: 16px;
+  display: block;
+}
